# kernel_econ_alignment

./: .gitignore  LICENSE  Manifest.toml  Project.toml  README.md  all_figures.py  asset_pricing_benchmark.py  asset_pricing_matern.py  asset_pricing_neural.py  figures_asset_pricing.py  figures_human_capital.py  figures_neoclassical_growth_2_1.py  figures_neoclassical_growth_baseline.py  figures_neoclassical_growth_concave_convex.py  figures_neoclassical_growth_robustness.py  figures_neoclassical_growth_robustness_2_1.py  figures_neoclassical_human_capital.py  figures_optimal_advertising.py  figures_shooting_vs_kernels_neoclassical_growth.py  human_capital_matern.py  kernels.py  neoclassical_growth_benchmark.py  neoclassical_growth_concave_convex_matern.py  neoclassical_growth_dae_matern.py  neoclassical_growth_matern.py  neoclassical_growth_neural.py  neoclassical_human_capital_matern.py  new_neoclassical_growth_concave_convex_matern.py  new_neoclassical_growth_matern.py  new_neoclassical_growth_neural.py  new_neoclassical_human_capital_matern.py  new_optimal_advertising_matern.py  optimal_advertising_matern.py  pyproject.toml  requirements.txt  shooting_vs_kernels_neoclassical_growth.py  tables_neoclassical_growth.py
figures/: README.md  neoclassical_growth_model_nu_rho.tex
generate_figures/: figures_asset_pricing.py
notebooks/: asset_pricing_julia.ipynb  asset_pricing_python.ipynb  neoclassical_growth_julia.ipynb  neoclassical_growth_python.ipynb
old code/: asset_pricing_neural.py  b_asset_pricing_matern.py  b_neoclassical_growth_concave_convex_matern.py  (+9 more)
(+12 files in other folders)
