[project]
name = "uv-update"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyipopt>=1.6.1",
    "jax>=0.7.2",
    "jinja2>=3.1.6",
    "jsonargparse>=4.41.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pyomo>=6.9.4",
    "quadax>=0.2.9",
]
